Fixed events overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,14 @@ blockquote {
 	margin-top: 0;
 }
 
+.ellipsis_3_line{
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 /* Layout
 ----------------------------------------------------------------------------- */
 .header {
